; ModuleID = '/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_criov.c_crypto_copyback.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/opencrypto/extr_criov.c_crypto_copyback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.uio = type { i32 }

@CRYPTO_F_IMBUF = common dso_local global i32 0, align 4
@CRYPTO_F_IOV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @crypto_copyback(i32 %0, i64 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @CRYPTO_F_IMBUF, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %5
  %16 = load i64, i64* %7, align 8
  %17 = inttoptr i64 %16 to %struct.mbuf*
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @m_copyback(%struct.mbuf* %17, i32 %18, i32 %19, i32 %20)
  br label %43

22:                                               ; preds = %5
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @CRYPTO_F_IOV, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %34

27:                                               ; preds = %22
  %28 = load i64, i64* %7, align 8
  %29 = inttoptr i64 %28 to %struct.uio*
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* %10, align 4
  %33 = call i32 @cuio_copyback(%struct.uio* %29, i32 %30, i32 %31, i32 %32)
  br label %42

34:                                               ; preds = %22
  %35 = load i32, i32* %10, align 4
  %36 = load i64, i64* %7, align 8
  %37 = load i32, i32* %8, align 4
  %38 = sext i32 %37 to i64
  %39 = add nsw i64 %36, %38
  %40 = load i32, i32* %9, align 4
  %41 = call i32 @bcopy(i32 %35, i64 %39, i32 %40)
  br label %42

42:                                               ; preds = %34, %27
  br label %43

43:                                               ; preds = %42, %15
  ret void
}

declare dso_local i32 @m_copyback(%struct.mbuf*, i32, i32, i32) #1

declare dso_local i32 @cuio_copyback(%struct.uio*, i32, i32, i32) #1

declare dso_local i32 @bcopy(i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
